--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "poppins", sans-serif;
+  background: linear-gradient(to bottom, #f5f5dc, #f0f0f0, #e5e5ea);
 }
 
 body::-webkit-scrollbar {
@@ -21,7 +22,7 @@ body::-webkit-scrollbar-thumb {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #333;
+  background-color: #1a1d23;
   color: #fff;
   padding: 1rem;
   text-align: center;
@@ -40,7 +41,7 @@ body::-webkit-scrollbar-thumb {
   font-size: 1.5rem;
   list-style: none;
   padding: 0;
-  opacity: 0.7;
+  opacity: 0.8;
 }
 
 .nav-links li {
@@ -67,10 +68,13 @@ a:hover {
 section {
   padding-top: 4vh;
   height: 96vh;
-  margin: 1rem 10rem;
+  margin: 2rem 10rem;
   box-sizing: border-box;
   min-height: fit-content;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 2rem;
+  background-color: #e5e5e5;
+  
 }
 .section-container {
   display: flex;
